cleanup of some bugs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,6 +128,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="RopeGrappleProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="RopeGrappleGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="RopeGrappleCharacter")
+bUseFixedFrameRate=False
+FixedFrameRate=60.000000
+bSmoothFrameRate=True
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -145,4 +148,8 @@ ManualIPAddress=
 
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
+MaxSubsteps=6
+MaxSubstepDeltaTime=0.016666
+bSubsteppingAsync=True
+MinPhysicsDeltaTime=0.000000
 
